fix: featured-card truncate text on desktop

--- a/src/scss/partials/_cards.scss
+++ b/src/scss/partials/_cards.scss
@@ -203,6 +203,12 @@
   &_body {
     background-color: transparent;
     padding: 18px;
+    @include mq($from: desktop) {
+      > p {
+        height: 4.12500rem;
+        overflow: hidden;
+      }
+    }
   }
   &_title {
     color: get-color(dark);
@@ -211,6 +217,11 @@
     font-weight: 400;
     line-height: 1.62500rem;
     margin: 0 0 15px;
+
+    @include mq($from: desktop) {
+      overflow: hidden;
+      height: 3.25rem;
+    }
   }
   &_date {
     color: rgba(get-color(dark), .6);
